feat: add Docker support
